--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </style>
 </head>
 <body>
-<h1>Random Funny Response:</h1>
-<div id="funny-response"></div>
+<h1>How are you:</h1>
+<h1 id="funny-response"></h1>
 
 <script>
   // Array of funny responses
