--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Random Funny Response</title>
+<title>How are you?</title>
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -13,7 +13,7 @@
 </style>
 </head>
 <body>
-<h1>How are you:</h1>
+<h2>How are you?</h2>
 <h1 id="funny-response"></h1>
 
 <script>
